# earthkit-workflows-anemoi

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: readthedocs-pr-update.yml
doc/examples/: EnsembleMean.html  EnsembleMean.ipynb
docs/: conf.py  index.rst  overview.rst
docs/api/: fluent.rst  inference.rst  utils.rst
docs/usage/: datasets.rst  expansion.rst  inference.rst
src/anemoi/cascade/: __init__.py  fluent.py  inference.py  input.py  runner.py  types.py
src/anemoi/cascade/backends/: fieldlist.py
src/anemoicascade/: __init__.py  anemoi_runners.py  fluent.py  inference.py  runner.py
src/anemoicascade/backends/: fieldlist.py
src/anemoicascade/wrappers/: array_list.py  metadata.py
src/earthkit/workflows/plugins/anemoi/: fluent.py  inference.py  output.py  runner.py  types.py  utils.py
src/earthkit/workflows/plugins/anemoi/testing/: __init__.py  checks.py
tests/: .gitignore  conftest.py  executor.py  metadata.json  mocks.py  test_fluent.py  test_fluent_helpers.py  test_import.py  test_inference.py
tests/integration/: conftest.py  executor.py
tests/integration/inference/: .gitignore  test_integration.py
tests/integration/inference/single-exotic-shape/: metadata.json
tests/integration/inference/single-o48-1.1/: config.yaml
tests/unit/inference/: test_fluent.py  test_inference.py
tests/utils/: test_expansion.py
