# (C) Copyright 2024 ECMWF.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
# In applying this licence, ECMWF does not waive the privileges and immunities
# granted to it by virtue of its status as an intergovernmental organisation
# nor does it submit to any jurisdiction.

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = [ "setuptools>=60", "setuptools-scm>=8" ]

[project]
name = "anemoi-cascade"
description = "A Cascade interface to anemoi inference"
license = { text = "Apache License Version 2.0" }
authors = [
  { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]

dependencies = [
  "anemoi-inference>0.3",
  "cascade-python @ git+https://github.com/ecmwf/cascade.git",
  "earthkit-data @ git+https://github.com/ecmwf/earthkit-data.git",
]
optional-dependencies.tests = [ "pytest", "pytest-mock" ]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools_scm]
version_file = "src/anemoi/cascade/_version.py"

[tool.isort]
profile = "black"
